--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,34 @@
 plugins {
     id 'java'
 }
-
-group 'org.example'
-version '1.0-SNAPSHOT'
-
+allprojects {
+    group = 'gradle-mvc'
+    version = '0.0.1'
+}
+task sourcesJar(type: Jar, dependsOn: classes) {
+    archiveClassifier.set('sources')
+    from sourceSets.main.allSource
+}
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    archiveClassifier.set('javadoc')
+    from javadoc.destinationDir
+}
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+/*jar {
+manifest {
+attributes('Implementation-Title': project.name,
+ 'Implementation-Version': project.version,
+ 'Main-Class': 'helloworldmvc.HelloWorldMVC')
+}
+}*/
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
 test {
