--- a/model/build.gradle
+++ b/model/build.gradle
@@ -2,8 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'gradle-mvc.model'
-version '1.0-SNAPSHOT'
+group 'mvc.model'
 
 repositories {
     mavenCentral()
