--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 plugins {
     id 'java'
 }
+
+group = 'mvc'
 allprojects {
-    group = 'gradle-mvc'
     version = '0.0.1'
 }
+
 task sourcesJar(type: Jar, dependsOn: classes) {
     archiveClassifier.set('sources')
     from sourceSets.main.allSource
@@ -29,6 +31,7 @@ repositories {
 }
 
 dependencies {
+    implementation project(':controller')
 }
 
 test {
