--- a/model/build.gradle
+++ b/model/build.gradle
@@ -9,8 +9,9 @@ repositories {
 }
 
 dependencies {
+    testImplementation 'org.testng:testng:+'
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
